# TeamfightGodot

./: .clangd  .gitignore  .split_original_sim_effects_exec.cpp  AGENTS.md  CLAUDE.md  NATIVE_FIRST_BATCH_TODO.md  README.md  compile_commands.json  cpp_core_technical_audit.md  export_presets.cfg  icon.svg.import  native_duel_output.txt  project.godot  run_godot.ps1  teamfight_simulation_core.gdextension  test_output.txt
.cursor/plans/: next_steps_analysis_d831a86f.plan.md
.github/workflows/: native-batch-core.yml
assets/theme/: theme.tres
docs/: IMPLEMENTATION_PLAN_SUMMARY.md  OPTIMIZATION_ACTION_PLAN.md  PERFORMANCE_HOTSPOT_ANALYSIS.md  PERFORMANCE_SUMMARY.md  benchmark_profiling_notes.md  benchmark_rundown.md  optimization_results.md  performance_audit_batch_stats.md  python_relics_vs_godot.md  simulation_and_testing.md  targeting_scoring_spatial_audit.md
docs/decisions/: 0001-native-first-batch-core.md
examples/: balance_and_kit_example.gd
fixtures/: debug_mage_guardian.json
fixtures/draft_ai/: draft_ai_config_counter_heavy.json  draft_ai_config_legacy_lookahead.json  draft_ai_config_lookahead_softmax.json  draft_ai_config_risk_ceiling.json  draft_ai_config_risk_safe.json
fixtures/goldens/: DATA_SOURCE.md  FIXTURE_BEHAVIORS.md  ability_kits.example.json  ability_kits.json  balance_patches.json  champion_kits.example.json  champion_kits.json  champion_schema.json  contract_schema.json  match_fixtures.json  minion_schema.json  role_kits.json
fixtures/stats_dashboard/: combat_stats.csv  combat_stats_ci.csv  hero_combinations.csv  role_combinations.csv  role_stats.csv  summary_stats.csv
legacy/stats_output_100k/: combat_stats.csv
native/: CMakeLists.txt  README.md
native/batch_core/: CMakeLists.txt  README.md  batch_core.gdextension  build.ps1
native/batch_core/src/: batch_match_engine.cpp  batch_match_engine.h  batch_match_engine_native.cpp  batch_match_engine_native.h  register_types.cpp  register_types.h
native/src/: python_random.hpp  register_types.cpp  stat_definitions.hpp  teamfight_simulation_core.cpp  teamfight_simulation_core.hpp
native/src/simulation/: _extract_profile.py  sim_allocation_tracker.cpp  sim_allocation_tracker.hpp  sim_aoe.hpp  sim_catalog.cpp  sim_catalog.hpp  sim_channel.cpp  sim_channel.hpp  sim_combat.cpp  sim_combat.hpp  sim_combat_actions.cpp  sim_combat_internal.cpp  sim_combat_internal.hpp  sim_combat_projectile.cpp  sim_constants.hpp  sim_coordinator_bindings.cpp  sim_coordinator_bindings.hpp  sim_coordinator_catalog.cpp  sim_coordinator_catalog.hpp  sim_coordinator_host.cpp  sim_coordinator_host.hpp  sim_coordinator_match.cpp  sim_coordinator_match.hpp  sim_coordinator_state.cpp  sim_coordinator_state.hpp  sim_coordinator_targeting.cpp  sim_coordinator_targeting.hpp  sim_coordinator_tick.cpp  sim_coordinator_tick.hpp  sim_coordinator_viewer.cpp  sim_coordinator_viewer.hpp  sim_damage.cpp  sim_damage.hpp  sim_damage_apply.cpp  sim_damage_internal.cpp  sim_damage_internal.hpp  sim_damage_modifiers.cpp  sim_draft_ai_config.cpp  sim_draft_ai_config.hpp  sim_draft_ai_evaluator.cpp  (+107 more)
native/tests/: register_test_types.cpp  teamfight_simulation_test_runner.cpp  teamfight_simulation_test_runner.hpp  teamfight_simulation_tests.gdextension
native/tools/: split_sim_effects_exec.py
scenes/: batch_runner.tscn  battle_unit.tscn  draft_screen.tscn  draft_testing.tscn  draft_tooltip_card.tscn  game_root.tscn  main_menu.tscn  simulation_viewer.tscn  stats_dashboard.tscn
scenes/components/: chart_tooltip.tscn  draft_champion_tile.tscn  draft_screen_shell.tscn  export_popup.tscn
schemas/: champion_schema.json  contract_schema.json
scripts/: batch_match_engine.gd  batch_match_engine.gd.uid  batch_match_engine_fallback.gd  batch_match_engine_fallback.gd.uid  batch_runner.gd  batch_runner.gd.uid  batch_unit_factory.gd  batch_unit_spec.gd  battle_metrics.gd  battle_metrics.gd.uid  battle_unit.gd  battle_unit.gd.uid  battlefield.gd  battlefield.gd.uid  champion_catalog.gd  champion_catalog.gd.uid  combat_data.gd  combat_data.gd.uid  combat_effect.gd  combat_effect.gd.uid  combat_effect_context.gd  combat_effect_context.gd.uid  combat_effect_result.gd  combat_effect_result.gd.uid  combat_projectile_state.gd  combat_projectile_state.gd.uid  combat_registry.gd  combat_registry.gd.uid  combat_simulation_core.gd  combat_simulation_core.gd.uid  combat_unit_state.gd  combat_unit_state.gd.uid  combat_world.gd  combat_world.gd.uid  draft_hero_button.gd  draft_hero_button.gd.uid  draft_pick_border.gd  draft_pick_border.gd.uid  draft_screen.gd  draft_screen.gd.uid  (+22 more)
scripts/app/: aoe_ring_node.gd  champion_catalog_tooltip.gd  champion_satellite_generator.gd  draft_testing.gd  game_root.gd  hp_shield_bar.gd  main_menu.gd  roster_champion_card.gd  satellite_context.gd  satellite_registries.gd  satellite_spec.gd  satellite_tooltip_manager.gd  simulation_viewer.gd  simulation_viewer_arena.gd  simulation_viewer_base.gd  stats_balance_bar.gd  stats_bar_control.gd  stats_chart_axis_guides.gd  stats_dashboard.gd  stats_doughnut.gd  viewer_unit_node.gd
scripts/simulation/: champion_catalog.gd  champion_spec.gd  champion_stats.gd  effect_spec.gd  headless_runner.gd  kit_catalog.gd  kit_spec.gd  kit_stats.gd  match_replay_input.gd  match_replay_summary.gd  matchup_tracker.gd  native_simulation_backend.gd  parity_tools.gd  replay_io.gd  role_config_spec.gd  sim_constants.gd  sim_runner.gd  simulation_backend.gd  simulation_batch_worker.gd  simulation_schema.gd  spawn_spec.gd  teamfight_simulation_core.gd  (+1 more)
stats_output_100k/: hero_combinations.csv  role_stats.csv  summary_stats.csv
stats_output_10k/: matchup_vs.opponent.translation~RF786e537.TMP
stats_output_baseline/: combat_stats.hero.translation~RF786e2b8.TMP  mechanical_signals.cc.translation~RF786e2e6.TMP
tests/: batch_native_parity_test.gd  batch_smoke_test.gd  batch_smoke_test.gd.uid  batch_smoke_test.tscn  dummy_target.gd  dummy_target.gd.uid  effect_smoke_test.gd  effect_smoke_test.gd.uid  effect_smoke_test.tscn
training_data/: ban_aware_weights.txt
wiki/: README.md
(+224 files in other folders)
